--- a/.github/workflows/sample_workflow.yml
+++ b/.github/workflows/sample_workflow.yml
@@ -1,2 +1,11 @@
 name: Deployment
 on: push
+
+jobs:
+  build:
+    name: Build and push image
+    runs-on: ubuntu-latest
+
+    steps:
+      - name: "Checkout repository"
+        uses: actions/checkout@v2
