--- a/.github/workflows/sample_workflow.yml
+++ b/.github/workflows/sample_workflow.yml
@@ -7,6 +7,9 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
+      - name: "Checkout repository"
+        uses: actions/checkout@v2
+
       - name: "Build image and push it to setops image registry"
         id: build_and_push_app
         uses: ./.github/actions/build_and_push_image
