Add an input variable

--- a/.github/workflows/sample_workflow.yml
+++ b/.github/workflows/sample_workflow.yml
@@ -13,3 +13,7 @@ jobs:
       - name: "Build image and push it to setops image registry"
         id: build_and_push_app
         uses: ./.github/actions/build_and_push_image
+        with:
+          stages: |
+            production
+            demo
