--- a/.github/actions/build_and_push_image/action.yml
+++ b/.github/actions/build_and_push_image/action.yml
@@ -1,10 +1,15 @@
 name: "Build image and push it with a myriad of tags"
 description: "does what it says in the name"
 
+inputs:
+  stages:
+    description: list of stages
+    required: true
+
 runs:
   using: composite
   steps:
     - name: foo
       run: |
-        echo hello
+        echo ${{ inputs.stages }}
       shell: bash
