--- a/.github/actions/build_and_push_image/action.yml
+++ b/.github/actions/build_and_push_image/action.yml
@@ -11,5 +11,5 @@ runs:
   steps:
     - name: foo
       run: |
-        echo ${{ inputs.stages }}
+        echo "${{ inputs.stages }}"
       shell: bash
