--- a/.github/workflows/sample_workflow.yml
+++ b/.github/workflows/sample_workflow.yml
@@ -14,6 +14,4 @@ jobs:
         id: build_and_push_app
         uses: ./.github/actions/build_and_push_image
         with:
-          stages: |
-            production
-            demo
+          stages: '["production", "demo"]'
