--- a/.github/workflows/sample_workflow.yml
+++ b/.github/workflows/sample_workflow.yml
@@ -15,3 +15,4 @@ jobs:
         uses: ./.github/actions/build_and_push_image
         with:
           stages: '["production", "demo"]'
+          apps: '["web", "clock", "worker"]'
