fix "json" syntax

--- a/.github/actions/build_and_push_image/action.yml
+++ b/.github/actions/build_and_push_image/action.yml
@@ -14,5 +14,5 @@ runs:
   steps:
     - name: foo
       run: |
-        echo '{"stages": ${{ inputs.stages }}, "apps: ${{ inputs.apps }}' | jq '.'
+        echo '{"stages": ${{ inputs.stages }}, "apps": ${{ inputs.apps }} }' | jq '.'
       shell: bash
