--- a/.github/actions/build_and_push_image/action.yml
+++ b/.github/actions/build_and_push_image/action.yml
@@ -15,5 +15,6 @@ runs:
     - name: foo
       run: |
         echo '{"stages": ${{ inputs.stages }}, "apps": ${{ inputs.apps }} }' \
-        | jq '.stages[] as $stages | .apps[] as $apps | [$stages, $apps]'
+        | jq '.stages[] as $stages | .apps[] as $apps | [$stages, $apps]' \ 
+        | jq -c 'map("api.setops.co/zweitag/veritrustid/" + .[0] + "/" + .[1] + ":latest")'
       shell: bash
