--- a/.github/actions/build_and_push_image/action.yml
+++ b/.github/actions/build_and_push_image/action.yml
@@ -15,6 +15,5 @@ runs:
     - name: foo
       run: |
         echo '{"stages": ${{ inputs.stages }}, "apps": ${{ inputs.apps }} }' \
-        | jq '.stages[] as $stages | .apps[] as $apps | [$stages, $apps]' \ 
-        | jq -c '.'
+        | jq '.stages[] as $stages | .apps[] as $apps | [$stages, $apps] | map("api")'
       shell: bash
