Surround jq stuff with array

--- a/.github/actions/build_and_push_image/action.yml
+++ b/.github/actions/build_and_push_image/action.yml
@@ -15,5 +15,5 @@ runs:
     - name: foo
       run: |
         echo '{"stages": ${{ inputs.stages }}, "apps": ${{ inputs.apps }} }' \
-        | jq '.stages[] as $stages | .apps[] as $apps | [{stage: $stages, app: $apps}]'
+        | jq '[.stages[] as $stages | .apps[] as $apps | {stage: $stages, app: $apps}]'
       shell: bash
