--- a/.github/actions/build_and_push_image/action.yml
+++ b/.github/actions/build_and_push_image/action.yml
@@ -15,5 +15,8 @@ runs:
     - name: foo
       run: |
         echo '{"stages": ${{ inputs.stages }}, "apps": ${{ inputs.apps }} }' \
-        | jq '[.stages[] as $stages | .apps[] as $apps | {stage: $stages, app: $apps}]'
+        # build the cartesian product of all stages and all apps \
+        | jq '[.stages[] as $stages | .apps[] as $apps | {stage: $stages, app: $apps}]' \
+        # build the image tag names with a compact output \
+        jq -c 'map("api.setops.co/zweitag/veritrustid/" + .["env"] + "/" + .["app"] + ":latest")'
       shell: bash
