--- a/.github/actions/build_and_push_image/action.yml
+++ b/.github/actions/build_and_push_image/action.yml
@@ -17,3 +17,4 @@ runs:
         echo '{"stages": ${{ inputs.stages }}, "apps": ${{ inputs.apps }} }' \
         # build the cartesian product of all stages and all apps \
         | jq '[.stages[] as $stages | .apps[] as $apps | {stage: $stages, app: $apps}]'
+      shell: bash
