--- a/.github/actions/build_and_push_image/action.yml
+++ b/.github/actions/build_and_push_image/action.yml
@@ -15,8 +15,6 @@ runs:
     - name: foo
       run: |
         echo '{"stages": ${{ inputs.stages }}, "apps": ${{ inputs.apps }} }' \
-        | jq '[.stages[] as $stages | .apps[] as $apps | {stage: $stages, app: $apps}]'
-        | jq -c 'map("api.setops.co/zweitag/my_project/" + .["stage"] + "/" + .["app"] + ":latest")' \
-        | sed 's/\[//g' \
-        | sed 's/\]//g'
+        | jq '[.stages[] as $stages | .apps[] as $apps | {stage: $stages, app: $apps}]' \
+        | jq -c 'map("api.setops.co/zweitag/my_project/" + .["stage"] + "/" + .["app"] + ":latest")'
       shell: bash
