--- a/.github/actions/build_and_push_image/action.yml
+++ b/.github/actions/build_and_push_image/action.yml
@@ -14,9 +14,12 @@ runs:
   steps:
     - name: foo
       run: |
+        IMAGES_AS_CSV_STRING=` \
         echo '{"stages": ${{ inputs.stages }}, "apps": ${{ inputs.apps }} }' \
         | jq '[.stages[] as $stages | .apps[] as $apps | {stage: $stages, app: $apps}]' \
         | jq -c 'map("api.setops.co/zweitag/my_project/" + .["stage"] + "/" + .["app"] + ":latest")' \
         | sed 's/\[//g' \
-        | sed 's/\]//g'
+        | sed 's/\]//g' \
+        `
+        echo $IMAGES_AS_CSV_STRING
       shell: bash
