Try to find a valid bash syntax

--- a/.github/actions/deploy/action.yml
+++ b/.github/actions/deploy/action.yml
@@ -16,6 +16,6 @@ runs:
     - name: Create releases
       run: |
         declare -A stages
-        stages = (["web"]=123, ["clock"]="foo")
+        stages=(["web"]="123", ["clock"]="foo")
         echo $stages
       shell: bash
