--- a/.github/actions/deploy/action.yml
+++ b/.github/actions/deploy/action.yml
@@ -19,5 +19,7 @@ runs:
         for stage in $(echo '${{ inputs.apps }}' | jq '.[]'); do
           echo "Creating Release:"
           echo $stage
+          stages[stage]="release_id_from_setops"
         done
+        echo $stages
       shell: bash
