--- a/.github/actions/deploy/action.yml
+++ b/.github/actions/deploy/action.yml
@@ -20,13 +20,9 @@ runs:
           stages[$stage]=release_id_from_setops
         done
 
-        for stage in $stages; do
-          echo "Creating Release:"
-        done
+        echo $stages
 
-        echo $stages["web"]
-        echo $stages["foo"]
-        echo $stages["clock"]
-        echo $stages[clock]
-        echo $stages["worker"]
+        for stage in $stages; do
+          echo Creating Release: $stage
+        done
       shell: bash
