--- a/.github/actions/deploy/action.yml
+++ b/.github/actions/deploy/action.yml
@@ -31,7 +31,7 @@ runs:
 
         echo "Run pre-deploy-commands"
         first_stage=${stages[0]}
-        $release_id_of_first_stage=${stages_with_release_id[$first_stage]}
+        release_id_of_first_stage=${stages_with_release_id[$first_stage]}
         echo Migrate for $first_stage - $release_id_of_first_stage
 
         echo "Commit"
