--- a/.github/workflows/sample_workflow.yml
+++ b/.github/workflows/sample_workflow.yml
@@ -12,7 +12,7 @@ jobs:
 
       - name: "Build image and push it to setops image registry"
         id: build_and_push_app
-        uses: ./.github/actions/build_and_push_image
+        uses: github/hzeus/build_and_push_image@main
         with:
           stages: '["production", "demo"]'
           apps: '["web", "clock", "worker"]'
@@ -30,6 +30,6 @@ jobs:
 
       - name: "Deploy stage"
         id: deployment
-        uses: ./.github/actions/deploy
+        uses: github/hzeus/build_and_push_image@main
         with:
           apps: '["web", "clock", "worker"]'
