--- a/build_and_push_image/action.yml
+++ b/build_and_push_image/action.yml
@@ -18,9 +18,10 @@ runs:
         declare -a image_names
         for stage in $(echo '${{ inputs.stages }}' | jq '.[]'); do
           for app in $(echo '${{ inputs.apps }}' | jq '.[]'); do
-            echo $stage $app
+            image_names+=("api.setops.co/zweitag/my_project/"+$stage+"/"+$app+":latest")
           done
         done
+        echo $image_names
 
         IMAGES_AS_CSV_STRING=` \
         echo '{"stages": ${{ inputs.stages }}, "apps": ${{ inputs.apps }} }' \
