Use jq -r to remove "

--- a/build_and_push_image/action.yml
+++ b/build_and_push_image/action.yml
@@ -16,8 +16,8 @@ runs:
       id: build_image_names
       run: |
         declare -a image_names
-        for stage in $(echo '${{ inputs.stages }}' | jq '.[]'); do
-          for app in $(echo '${{ inputs.apps }}' | jq '.[]'); do
+        for stage in $(echo '${{ inputs.stages }}' | jq -r '.[]'); do
+          for app in $(echo '${{ inputs.apps }}' | jq -r '.[]'); do
             image_names+=("api.setops.co/zweitag/my_project/$stage/$app:latest")
           done
         done
