--- a/deploy/action.yml
+++ b/deploy/action.yml
@@ -58,7 +58,7 @@ runs:
         for i in $(seq 1 $max_times); do 
           echo foo $i
           # Simulate an successful release
-          if [ $i = 9 ]; then break; fi
+          # if [ $i = 9 ]; then break; fi
 
           sleep 1
           
