--- a/.github/workflows/sample_workflow.yml
+++ b/.github/workflows/sample_workflow.yml
@@ -36,11 +36,6 @@ jobs:
           apps: '["web", "clock", "worker"]'
           predeploy_command: "yeehah"
 
-  notify:
-    name: Notify deployment status
-    needs: deploy
-    runs-on: ubuntu-latest
-    steps:
-      - name: check steps.build.outputs.exit_code
-        run: echo ${{ needs.deploy.outputs.exit_code }}
+      - name: check steps.deploy.outputs.exit_code
+        run: echo ${{ steps.deploy.outputs.exit_code }}
         if: always()
