--- a/.github/workflows/matrix_workflow.yml
+++ b/.github/workflows/matrix_workflow.yml
@@ -8,5 +8,6 @@ jobs:
       matrix:
         envs: [1, 2]
     steps:
-      - name: "Checkout repository"
-        uses: actions/checkout@v3  
+      - name: Sleep for 15 seconds
+        run: sleep 15s
+        shell: bash
